<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
      android:id="@+id/root"
      android:stretchColumns="*"
      android:background="#000000">
  <TableRow android:layout_margin="0dip"
         android:id="@+id/first_row">
    <Button android:id="@+id/btnGetUsers" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/getUsers"
          android:onClick="getUsers" />
    <Button android:id="@+id/addUser" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/addUser"
          android:onClick="addUser" />
    <Button android:id="@+id/updateUser" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/updateUser" />
    <Button android:id="@+id/deleteUser" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/delUser" />
  </TableRow>
  <TableRow android:layout_margin="0dip"
         android:id="@+id/second_row">
    <Button android:id="@+id/getFiles" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/getFiles"
          android:onClick="getFiles" />
    <Button android:id="@+id/addFile" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/addFile"/>
    <Button android:id="@+id/updateFile" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/updateFile" />
    <Button android:id="@+id/deleteFile" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/delFile" />
    <Button android:id="@+id/dnldFile" 
          android:layout_width="0dip"
          android:layout_weight="1"
          android:padding="10dip" 
          android:text="@string/dnldFile" />
  </TableRow>
  <TableRow android:layout_margin="0dip"
         android:id="@+id/third_row">
    <EditText 
        android:id="@+id/getResponse"
        android:layout_margin="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:minLines="15"
		android:maxLines="15"
		android:textSize="12sp" />
  </TableRow>
  </TableLayout>
  
